<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  BIND CARD  -->
    <string name="ioka_save_card_toolbar">Новая карта</string>
    <string name="ioka_save_card_save">Сохранить</string>

    <!--  PAYMENT  -->
    <string name="ioka_payment_toolbar">К оплате %s</string>
    <string name="ioka_payment_or_pay_with_card">Или оплатите картой</string>
    <string name="ioka_payment_save_card">Сохранить карту</string>
    <string name="ioka_payment_button">Оплатить %s</string>
    <string name="ioka_payment_transactions_protection">Все транзакции защищены</string>

    <!--  COMMON  -->
    <string name="ioka_common_try_again">Попробовать заново</string>
    <string name="ioka_common_understand">Понятно</string>
    <string name="ioka_common_continue">Продолжить</string>
    <string name="ioka_common_payment_confirmation">Подтверждение оплаты</string>
    <string name="ioka_common_server_error">Ошибка на стороне сервера. Попробуйте еще раз</string>
    <string name="ioka_common_card_number_hint">Введите номер карты</string>
    <string name="ioka_common_expiry_date_hint">ММ/ГГ</string>
    <string name="ioka_common_cvv_hint">CVV</string>
    <string name="ioka_common_cvv_description">3 цифры на \nобороте карты</string>
    <string name="ioka_common_processing_payment">Проводим оплату…</string>

    <!--  RESULTS  -->
    <string name="ioka_result_success_payment_title">Заказ оплачен</string>
    <string name="ioka_result_success_payment_subtitle">Заказ №%s</string>
    <string name="ioka_result_failed_payment_title">Платеж не прошел</string>
    <string name="ioka_result_failed_payment_common_cause">Проверьте, открыт ли доступ к интернет-покупкам и попробуйте снова</string>
</resources>