<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/ioka_color_background"
    tools:theme="@style/Theme.AppCompat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ioka_ic_close"
        app:title="@string/ioka_save_card_toolbar"
        app:titleTextColor="@color/ioka_color_text" />

    <kz.ioka.android.ioka.uikit.CardNumberEditText
        android:id="@+id/vCardNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <kz.ioka.android.ioka.uikit.FormattedNumberEditText
            android:id="@+id/etExpireDate"
            style="@style/PrimaryEditText.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:autofillHints="creditCardNumber"
            android:background="@drawable/ioka_bg_edittext"
            android:hint="@string/ioka_common_expiry_date_hint"
            android:inputType="date"
            android:maxLength="5"
            android:padding="16dp"
            app:groupLength="2"
            app:groupSeparator="/"
            app:numberOfGroups="2" />

        <kz.ioka.android.ioka.uikit.CvvEditText
            android:id="@+id/vCvvInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/vGap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

        <kz.ioka.android.ioka.uikit.ErrorView
            android:id="@+id/vError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="16dp" />
    </FrameLayout>

    <kz.ioka.android.ioka.uikit.IokaStateButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:sbText="@string/ioka_save_card_save" />
</androidx.appcompat.widget.LinearLayoutCompat>