<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ioka_bg_rounded_primary"
    android:minWidth="320dp"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ioka_common_payment_confirmation"
        android:textAppearance="@style/IokaPrimaryTextView.18"
        app:layout_constraintEnd_toStartOf="@id/btnClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@color/ioka_color_nonadaptable_transparent"
        android:src="@drawable/ioka_ic_close"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/vContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ioka_bg_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCardType"
            android:layout_width="24dp"
            android:layout_height="16dp"
            tools:src="@drawable/ioka_ic_ps_visa" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textAppearance="@style/IokaPrimaryTextView.16"
            tools:text="•••• 1234" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardNumber"
            android:background="@color/ioka_color_nonadaptable_transparent"
            android:hint="@string/ioka_common_cvv_hint"
            android:inputType="numberPassword"
            android:maxLength="3"
            android:textColorHint="@color/ioka_color_nonadaptable_grey"
            android:paddingHorizontal="4dp"
            android:paddingVertical="6dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ivCvvFaq"
            style="@style/IokaSecondaryImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ioka_ic_faq" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <kz.ioka.android.ioka.uikit.IokaStateButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vContainer"
        app:sbText="@string/ioka_common_continue" />
</androidx.constraintlayout.widget.ConstraintLayout>