<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ioka_color_background"
    tools:theme="@style/Theme.AppCompat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ioka_ic_close"
        app:titleTextColor="@color/ioka_color_text"
        tools:title="К оплате 12 560 ₸" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnGooglePay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/ioka_color_nonadaptable_transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ioka_ic_google_pay"
        app:layout_constraintTop_toBottomOf="@id/vToolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ioka_payment_or_pay_with_card"
        android:textAppearance="@style/IokaSecondaryTextView.12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGooglePay" />

    <View
        android:id="@+id/vDividerLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/ioka_color_divider"
        app:layout_constraintBottom_toBottomOf="@id/tvDivider"
        app:layout_constraintEnd_toStartOf="@id/tvDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDivider" />

    <View
        android:id="@+id/vDividerRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/ioka_color_divider"
        app:layout_constraintBottom_toBottomOf="@id/tvDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDivider"
        app:layout_constraintTop_toTopOf="@id/tvDivider" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupGooglePay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnGooglePay,tvDivider,vDividerLeft,vDividerRight" />

    <kz.ioka.android.ioka.uikit.CardNumberEditText
        android:id="@+id/vCardNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDivider" />

    <kz.ioka.android.ioka.uikit.FormattedNumberEditText
        android:id="@+id/etExpireDate"
        style="@style/PrimaryEditText.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:autofillHints="creditCardNumber"
        android:background="@drawable/ioka_bg_edittext"
        android:hint="@string/ioka_common_expiry_date_hint"
        android:inputType="date"
        android:maxLength="5"
        android:padding="16dp"
        app:groupLength="2"
        app:groupSeparator="/"
        app:layout_constraintEnd_toStartOf="@id/vCvvInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vCardNumberInput"
        app:numberOfGroups="2" />

    <kz.ioka.android.ioka.uikit.CvvEditText
        android:id="@+id/vCvvInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etExpireDate"
        app:layout_constraintTop_toTopOf="@id/etExpireDate" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vSaveCardSwitch"
        style="@style/IokaSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ioka_payment_save_card"
        android:textColor="@color/ioka_color_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etExpireDate"
        app:thumbTint="@color/ioka_color_switch_thumb_tint"
        app:trackTint="@color/ioka_color_switch_track_tint" />

    <kz.ioka.android.ioka.uikit.IokaStateButton
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/tvProtection"
        tools:sbText="Оплатить 12 560 ₸" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProtection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/ioka_ic_protection"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/ioka_payment_transactions_protection"
        android:textAppearance="@style/IokaPrimaryTextView.14"
        android:textColor="@color/ioka_color_success"
        app:drawableTint="@color/ioka_color_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>